--- a/views/add-teacher.ejs
+++ b/views/add-teacher.ejs
@@ -1,33 +1,29 @@
 <div class="container">
+    <% include partials/header.ejs %>
+    <div class="container">
     <% if (message != '') { %>
     <p class="text-center text-danger"><%= message %></p>
     <% } %>
-    <form class="add-player-form" action="" method="post" enctype="multipart/form-data">
+    <form class="add-player-form" action="" method="post">
         <div class="form-row">
             <div class="form-group col-md-4">
-                <input type="text" class="form-control" name="first_name" id="first-name" placeholder="First Name"
+                <input type="text" class="form-control" name="name" id="name" placeholder="Teacher Name"
                     required>
             </div>
-            <div class="form-group col-md-4">
-                <input type="text" class="form-control" name="last_name" id="last-name" placeholder="Last Name"
-                    required>
-            </div>
-            <div class="form-group col-md-4">
-                <input type="text" class="form-control" name="username" id="username" placeholder="Username" required>
-            </div>
-        </div>
-        <div class="form-row">
             <div class="form-group col-md-6">
-                <input type="number" class="form-control" name="number" id="number" placeholder="Number" required>
-            </div>
-            <div class="form-group col-md-6">
-                <select id="position" name="position" class="form-control" required>
+                <select name="classes" class="form-control" multiple="multiple" required>
                     <option selected disabled>Choose classes</option>
-                    <%classes.foreach(class=>{%>
-                        <option><%= class.name%></option>
-                    <%})%>
+                        <% classes.forEach(function(item){ %>
+                            <option value="<%= item.id %>"><%= item.name %></option>
+                        <% }); %>
+
                 </select>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary float-right">Add Player</button>
+        <button type="submit" class="btn btn-primary float-right">Add Teacher</button>
     </form>
+    </div>
+    </div>
+    </body>
+    
+    </html>
