--- a/views/add-teacher.ejs
+++ b/views/add-teacher.ejs
@@ -1,5 +1,5 @@
+<% include partials/header.ejs %>
 <div class="container">
-    <% include partials/header.ejs %>
     <div class="container">
     <% if (message != '') { %>
     <p class="text-center text-danger"><%= message %></p>
@@ -11,7 +11,7 @@
                     required>
             </div>
             <div class="form-group col-md-6">
-                <select name="classes" class="form-control" multiple="multiple" required>
+                <select name="classes" class="form-control" multiple="multiple">
                     <option selected disabled>Choose classes</option>
                         <% classes.forEach(function(item){ %>
                             <option value="<%= item.id %>"><%= item.name %></option>
